--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,14 @@
         <link rel="stylesheet" href="/static/css/msw_arrowSprites.css" />
     </head>
     <body>
+        
+        {% block bg %}{% endblock %}
+
         <nav class="navbar navbar-inverse navbar-static-top">
             
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <img src="/static/img/temp_logo.jpg"><a class="navbar-brand" href="/">Ocean Riders' Journal</a>
+                    <img src="/static/img/oceanrider_logo.png"><a class="navbar-brand" href="/">Ocean Riders' Journal</a>
                 </div>
                 <div class="navbar-collapse collapse" >
                     <ul class="nav navbar-nav navbar-right">
