--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,6 @@
         </style>
     </head>
     <body>
-
-
     <div class="site-wrapper">
 
       <div class="site-wrapper-inner">
@@ -27,7 +25,7 @@
         <div class="cover-container">
 
           <div class="inner cover">
-              <img src="/static/img/temp_logo.jpg">
+              <img src="/static/img/oceanrider_logo.png">
               <h1 class="cover-heading">Ocean Riders' Journal</h1>
               <p class="lead">placeholder surfer ipsum flotsam jetsam placeholder
               <p class="lead">
