--- a/templates/surf_entries_summary.html
+++ b/templates/surf_entries_summary.html
@@ -1,37 +1,54 @@
 {% extends 'base.html' %}
 {% block body %}
 
-<h3> Welcome back {{username}}! Here's a summary of your journal entries:</h3>
+    {% block bg %}
+    <style>
+        body {
+            background: url("../static/img/bg_swellLines.png") no-repeat center center fixed; 
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+            background-position: bottom; 
+/*            background-position-y: 15%;
+*/        }
 
-<table class="table table-hover table-condensed">
+    </style>
+    {% endblock %}
 
-    <thead>
-    	<tr>
-        	<th>When?</th>
-        	<th>Where?</th>
-            <th>Swell</th>
-            <th>Wind</th>
-            <th>Your Rating</th>
-      	</tr>
-    </thead>
-     
-    <tbody>
-        {% for entry in entries %}
-    	<tr>    
-        	<td>{{entry.date_time_start.strftime('%m/%d/%Y')}}<br>{{entry.date_time_start.strftime('%I:%m %p')}}</td>
-        	<td>{{entry.loc.beach_name}}<br>{{entry.spot_name}}</td>
-            <td><div title="{{entry.swell1_dir_deg_global}} {{entry.swell1_dir_comp}}" class="msw-swa msw-swa-{{entry.swell1_arrow_deg}}"> </div>
-                {{entry.swell1_ht}} @ {{entry.swell1_per}} sec</td>
-            <td><div class="msw-ssa msw-ssa-{{entry.wind_arrow_deg}}"> </div> <br> {{entry.wind_speed}} ({{entry.wind_gust}})</td>
-            <td>{{entry.rate_overall_fun}}</td>
-            <td><a class="btn btn-primary" href="/entryDetails/{{entry.id}}">Details</a></td>
-        </tr>
-    	{% endfor %}
-    </tbody>
+<div class="content-container">
 
-</table>
-<br>
-<br>
+    <h3> Welcome back {{username}}! Here's a summary of your journal entries:</h3>
+
+    <table class="table table-hover table-condensed">
+
+        <thead>
+        	<tr>
+            	<th>When?</th>
+            	<th>Where?</th>
+                <th>Swell</th>
+                <th>Wind</th>
+                <th>Your Rating</th>
+          	</tr>
+        </thead>
+         
+        <tbody>
+            {% for entry in entries %}
+        	<tr>    
+            	<td>{{entry.date_time_start.strftime('%m/%d/%Y')}}<br>{{entry.date_time_start.strftime('%I:%m %p')}}</td>
+            	<td>{{entry.loc.beach_name}}<br>{{entry.spot_name}}</td>
+                <td><div title="{{entry.swell1_dir_deg_global}} {{entry.swell1_dir_comp}}" class="msw-swa msw-swa-{{entry.swell1_arrow_deg}}"> </div>
+                    {{entry.swell1_ht}} @ {{entry.swell1_per}} sec</td>
+                <td><div title="{{entry.wind_dir_deg}} {{entry.wind_dir_comp}}" class="msw-ssa msw-ssa-{{entry.wind_arrow_deg}}"> </div> <br> {{entry.wind_speed}} ({{entry.wind_gust}})</td>
+                <td>{{entry.rate_overall_fun}}</td>
+                <td><a class="btn btn-primary" href="/entryDetails/{{entry.id}}">Details</a></td>
+            </tr>
+        	{% endfor %}
+        </tbody>
+
+    </table>
+
+</div>
 
 <!-- credit to the API -->
 <div class = "msw">
