--- a/templates/surf_entries_summary.html
+++ b/templates/surf_entries_summary.html
@@ -42,10 +42,15 @@
         	<tr>    
             	<td>{{entry.date_time_start.strftime('%m/%d/%Y')}}<br>{{entry.date_time_start.strftime('%I:%m %p')}}</td>
             	<td>{{entry.loc.beach_name}}<br>{{entry.spot_name}}</td>
-                <td><div title="{{entry.swell1_dir_deg_global}} {{entry.swell1_dir_comp}}" class="msw-swa msw-swa-{{entry.swell1_arrow_deg}}"> </div>
-                    {{entry.swell1_ht}} @ {{entry.swell1_per}} sec</td>
-                <td><div title="{{entry.wind_dir_deg}} {{entry.wind_dir_comp}}" class="msw-ssa msw-ssa-{{entry.wind_arrow_deg}}"> </div> <br> {{entry.wind_speed}} ({{entry.wind_gust}})</td>
-                <td>{{entry.rate_overall_fun}}</td>
+                <td><div title="{{entry.swell1_dir_deg_global}}&deg; {{entry.swell1_dir_comp}}" class="msw-swa msw-swa-{{entry.swell1_arrow_deg}}"> </div>
+                    {{entry.swell1_ht}} ft. @ {{entry.swell1_per}} sec</td>
+                <td><div title="{{entry.wind_dir_deg}}&deg;" class="msw-ssa msw-ssa-{{entry.wind_arrow_deg}}"> </div> <br> {{entry.wind_speed}} ({{entry.wind_gust}}) mph</td>
+                {% if entry.go_out == "N" %}
+                    <td>({{entry.rate_overall_fun}})<br>
+                    (condition check)</td>
+                {% else %}
+                    <td>{{entry.rate_overall_fun}}</td>
+                {% endif %}
                 <td><a class="btn btn-primary" href="/entryDetails/{{entry.id}}">Details</a></td>
             </tr>
         	{% endfor %}
@@ -70,11 +75,12 @@ $(function () {
 
         chart: {
             type: 'bubble',
+            backgroundColor: '#C8C8C8',
             zoomType: 'xy'
         },
 
         title: {
-            text: 'Ratings by Swell Size and Direction'
+            text: 'Your Session Ratings Plotted by Swell Size and Direction'
         },
 
         tooltip: {
@@ -86,7 +92,7 @@ $(function () {
 
         series: [{
             data: data.results,
-            name: 'Ratings of Overall Fun'
+            name: 'Your "Overall Fun" Ratings For All Beaches'
         },
         // {
         //     data: data.results,
@@ -99,6 +105,7 @@ $(function () {
                 enabled: true,
                 text: 'Swell Height in Feet',
                 style: {
+                    color: '#404040',
                     fontWeight: 'bold'
                 }
             }
@@ -115,6 +122,7 @@ $(function () {
                 enabled: true,
                 text: 'Swell Direction in Degrees',
                 style: {
+                    color: '#404040',
                     fontWeight: 'bold'
                 }
             }
