--- a/templates/surf_entry_details.html
+++ b/templates/surf_entry_details.html
@@ -17,126 +17,130 @@
     </style>
     {% endblock %}
 <div class="content-container">
-    <div>
-        <h3>{{entry.date_time_start.strftime('%m/%d/%Y %I:%m %p')}}
-        at {{entry.loc.beach_name}}
-        {% if entry.spot_name %}
-            ({{entry.spot_name}})
-        {% endif %}
-        {% if entry.go_out == "N" %}
-            (condition check: did not go out)
-        {% endif %}
-        {% if entry.buddy_name %}
-            with {{entry.buddy_name}}
-        {% else %}
-            {% if entry.go_out == "Y" %}
-            (Solo)
+
+
+    <div class="row">
+
+        <div class="col-md-9">
+            <h3>{{entry.date_time_start.strftime('%m/%d/%Y %I:%m %p')}}
+            at {{entry.loc.beach_name}}
+            {% if entry.spot_name %}
+                ({{entry.spot_name}})
             {% endif %}
-        {% endif %}
-        </h3>
-
-    </div>
-
-    <div>
-        <h4>
-            Board: {{entry.board.nickname}}
-            {% if entry.board.length_ft %}
-                {{entry.board.length_ft}}' {{entry.board.length_in}}"
-            {% endif %}
-            {% if entry.board.fins %}
-                ({{entry.board.fins}})
-            {% endif %}
-
-            {% if entry.board_pref == "ok" %}
-            {% else %}
-                <td>(wanted a {{entry.board_pref}} board)
-            {% endif %}
-            {% if entry.board_notes%}
-                : {{entry.board_notes}}
-            {% endif %}
-            {% if entry.board.category %}
-                <div class="icon-board">
-                    <img src="/static/img/icon_board_{{entry.board.category}}.png" title="{{entry.board.category}}"</a>
-                </div>
-            {% endif %}
-
-
-        </h4>
-
-    {#
-            {% if entry. %}
-                <li>: {{entry.}}</li>
-            {% endif %}
-    #}
-
-    </div>
-
-    <div>
-
-        {% if entry.gen_notes %}
-            <h4>
-            Overall experience: {{entry.gen_notes}}
-            </h4>
-        {% endif %}
-
-    </div>
-
-    <br>
-    <br>
-
-    <!-- MSW data -->
-    <div>
-        <table class="table-nonfluid">
-            <thead>
-                <tr>
-                    <th>Swell</th>
-                    <th>Wind</th>
-                </tr>
-            </thead>
-             
-            <tbody>
-                <tr>    
-                    <td><div title="{{entry.swell1_dir_deg_global}}&deg; {{entry.swell1_dir_comp}}" class="msw-swa msw-swa-{{entry.swell1_arrow_deg}}"> </div>
-                        {{entry.swell1_ht}} ft. @ {{entry.swell1_per}} sec</td>
-                    <td><div title="{{entry.wind_dir_deg}}&deg;" class="msw-ssa msw-ssa-{{entry.wind_arrow_deg}}"> </div> <br> {{entry.wind_speed}} ({{entry.wind_gust}})</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-    <br>
-    <br>
-
-    <!-- user ratings -->
-    <div>
-        <h4>
-            {% if entry.rate_wave_challenge %}
-                Wave challenge level: {{wave_challenge_dict[entry.rate_wave_challenge]}}<br>
-            {% endif %}
-
-            {% if entry.rate_wave_fun %}
-                Wave fun level: {{wave_fun_dict[entry.rate_wave_fun]}}<br>
-            {% endif %}
-
-            {% if entry.rate_crowd_den %}
-                Crowd density: {{crowd_den_dict[entry.rate_crowd_den]}}<br>
-            {% endif %}
-
-            {% if entry.rate_crowd_vibe %}
-                Crowd vibe: {{crowd_vibe_dict[entry.rate_crowd_vibe]}}<br>
-            {% endif %}
-
-            Overall fun level:
             {% if entry.go_out == "N" %}
-                looked {{overall_fun_dict[entry.rate_overall_fun]}} (condition check)
-            {% else %}
-                {{overall_fun_dict[entry.rate_overall_fun]}} 
+                (condition check: did not go out)
             {% endif %}
-        </h4>
-    </div>
+            {% if entry.buddy_name %}
+                with {{entry.buddy_name}}
+            {% else %}
+                {% if entry.go_out == "Y" %}
+                (Solo)
+                {% endif %}
+            {% endif %}
+            </h3>
+        </div>
 
-</div>
 
+        <!-- MSW data -->
+        <div class="col-md-3">
+            <table class="table-nonfluid">
+                <thead>
+                    <tr>
+                        <th>Swell</th>
+                        <th>Wind</th>
+                    </tr>
+                </thead>
+                 
+                <tbody>
+                    <tr>    
+                        <td><div title="{{entry.swell1_dir_deg_global}}&deg; {{entry.swell1_dir_comp}}" class="msw-swa msw-swa-{{entry.swell1_arrow_deg}}"> </div>
+                            {{entry.swell1_ht}} ft. @ {{entry.swell1_per}} sec</td>
+                        <td><div title="{{entry.wind_dir_deg}}&deg;" class="msw-ssa msw-ssa-{{entry.wind_arrow_deg}}"> </div> <br> {{entry.wind_speed}} ({{entry.wind_gust}})</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+    </div>  <!-- closes top row -->
+
+
+
+    <div class="row">
+
+        <div class="col-md-1">
+
+                {% if entry.board.category %}
+                    <div class="icon-board">
+                        <img src="/static/img/icon_board_{{entry.board.category}}.png" title="{{entry.board.category}}"></a>
+                    </div>
+                {% endif %}
+        </div>
+
+        <div class="col-md-3">
+            <h4>
+                Board: {{entry.board.nickname}}
+                {% if entry.board.length_ft %}
+                    {{entry.board.length_ft}}' {{entry.board.length_in}}"
+                {% endif %}
+                {% if entry.board.fins %}
+                    ({{entry.board.fins}})
+                {% endif %}
+
+                {% if entry.board_pref == "ok" %}
+                {% else %}
+                    (wanted a {{entry.board_pref}} board)
+                {% endif %}
+                {% if entry.board_notes%}
+                    : {{entry.board_notes}}
+                {% endif %}
+
+            </h4>
+        </div> <!-- closes board col -->
+
+        <!-- user ratings -->
+        <div class="col-md-8">
+            <h4>
+                {% if entry.rate_wave_challenge %}
+                    Wave challenge level: {{wave_challenge_dict[entry.rate_wave_challenge]}}<br>
+                {% endif %}
+
+                {% if entry.rate_wave_fun %}
+                    Wave fun level: {{wave_fun_dict[entry.rate_wave_fun]}}<br>
+                {% endif %}
+
+                {% if entry.rate_crowd_den %}
+                    Crowd density: {{crowd_den_dict[entry.rate_crowd_den]}}<br>
+                {% endif %}
+
+                {% if entry.rate_crowd_vibe %}
+                    Crowd vibe: {{crowd_vibe_dict[entry.rate_crowd_vibe]}}<br>
+                {% endif %}
+
+                Overall fun level:
+                {% if entry.go_out == "N" %}
+                    looked {{overall_fun_dict[entry.rate_overall_fun]}} (condition check)
+                {% else %}
+                    {{overall_fun_dict[entry.rate_overall_fun]}} 
+                {% endif %}
+            </h4>
+        </div> <!-- closes ratings col -->
+
+    </div>  <!-- closes middle row -->
+
+    <div class="row">
+        <div class="col-md-12">
+
+            {% if entry.gen_notes %}
+                <h4>
+                Overall experience: {{entry.gen_notes}}
+                </h4>
+            {% endif %}
+
+        </div>
+    </div> <!-- closes bottom row -->
+
+
+</div> <!-- closes content container -->
 
 <!-- credit to the API -->
 <div class = "msw">
